--- a/_articles/RJ-2024-012/RJ-2024-012.Rmd
+++ b/_articles/RJ-2024-012/RJ-2024-012.Rmd
@@ -70,8 +70,8 @@ author:
 date: '2025-03-11'
 date_received: '2022-09-13'
 journal:
-  firstpage: ~
-  lastpage: ~
+  firstpage: 4
+  lastpage: 27
 volume: 16
 issue: 2
 slug: RJ-2024-012
