--- a/_articles/RJ-2024-013/RJ-2024-013.Rmd
+++ b/_articles/RJ-2024-013/RJ-2024-013.Rmd
@@ -31,8 +31,8 @@ author:
 date: '2025-03-09'
 date_received: '2022-12-20'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 27
+  lastpage: 41
 volume: 16
 issue: 2
 slug: RJ-2024-013
