--- a/_articles/RJ-2024-014/RJ-2024-014.Rmd
+++ b/_articles/RJ-2024-014/RJ-2024-014.Rmd
@@ -32,8 +32,8 @@ author:
 date: '2025-03-09'
 date_received: '2023-11-20'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 134
+  lastpage: 154
 volume: 16
 issue: 2
 slug: RJ-2024-014
