--- a/_articles/RJ-2024-016/RJ-2024-016.Rmd
+++ b/_articles/RJ-2024-016/RJ-2024-016.Rmd
@@ -51,8 +51,8 @@ author:
 date: '2025-03-11'
 date_received: '2024-01-11'
 journal:
-  firstpage: ~
-  lastpage: []
+  firstpage: 175
+  lastpage: 190
 volume: 16
 issue: 2
 slug: RJ-2024-016
