--- a/_articles/RJ-2024-016/fuzzysimres.tex
+++ b/_articles/RJ-2024-016/fuzzysimres.tex
@@ -2,9 +2,9 @@
 \title{FuzzySimRes: Epistemic Bootstrap -- an Efficient Tool for Statistical Inference Based on Imprecise Data}
 \author{by Maciej Romaniuk, Przemys{\l}aw Grzegorzewski, Abbas Parchami}
 \maketitle
-\begin{abstract}
+\abstract{%
 The classical Efron's bootstrap is widely used in many areas of statistical inference, including imprecise data. In our new package FuzzySimRes, we adapted the bootstrap methodology to epistemic fuzzy data, i.e., fuzzy perceptions of the usual real-valued random variables. The epistemic bootstrap algorithms deliver real-valued samples generated randomly from the initial fuzzy sample. Then, these samples can be utilized directly in various statistical procedures. Moreover, we implemented a practically oriented simulation procedure to generate synthetic fuzzy samples and provided a real-life epistemic dataset ready to use for various techniques of statistical analysis. Some examples of their applications, together with the comparisons of the epistemic bootstrap algorithms and the respective benchmarks, are also discussed.
-\end{abstract}
+}
 %%%%%%%%%%%%%%%%%%%%%
 \section{Introduction} 
 \label{intro}
