--- a/_articles/RJ-2024-017/BCClong.tex
+++ b/_articles/RJ-2024-017/BCClong.tex
@@ -2,8 +2,8 @@
 \title{BCClong: An R Package for Bayesian Consensus Clustering for Multiple Longitudinal Features}
 \author{ Zhiwen Tan,  Chang Shen, Zihang Lu}
 \maketitle
-\abstract{
-It is very common nowadays for a study to collect multiple longitudinal features, and appropriately integrating these features simultaneously for defining individual subgroups (i.e., clusters) becomes increasingly crucial to understanding population heterogeneity and predicting future outcomes. The aim of this paper is to describe a new package, \pkg{BCClong}, which implements a Bayesian consensus clustering (BCC) model for multiple longitudinal features. Compared to existing packages, several key features make the \pkg{BCClong} package appealing: (a) it allows simultaneous clustering of mixed-type (e.g., continuous, discrete, and categorical) longitudinal features, (b) it allows each longitudinal feature to be collected from different sources, with measurements taken at distinct sets of time points (known as irregularly sampled longitudinal data), and (c) it relaxes the assumption that all features have the same clustering structure by estimating the feature-specific (local) clusterings and consensus (global) clustering. Using two real data examples, we provide a tutorial with step-by-step instructions on how to use the package. 
+\abstract{%
+It is very common nowadays for a study to collect multiple longitudinal features, and appropriately integrating these features simultaneously for defining individual subgroups (i.e., clusters) becomes increasingly crucial to understanding population heterogeneity and predicting future outcomes. The aim of this paper is to describe a new package, BCClong, which implements a Bayesian consensus clustering (BCC) model for multiple longitudinal features. Compared to existing packages, several key features make the BCClong package appealing: (a) it allows simultaneous clustering of mixed-type (e.g., continuous, discrete, and categorical) longitudinal features, (b) it allows each longitudinal feature to be collected from different sources, with measurements taken at distinct sets of time points (known as irregularly sampled longitudinal data), and (c) it relaxes the assumption that all features have the same clustering structure by estimating the feature-specific (local) clusterings and consensus (global) clustering. Using two real data examples, we provide a tutorial with step-by-step instructions on how to use the package.
 }
 \section[Introduction]{Introduction} \label{sec:intro}
 Cluster analysis has been widely used to identify subgroups of the study population, and it is also known as an unsupervised learning method in the machine learning literature. When longitudinal data is available, identifying distinct developmental patterns is a common goal in many research studies. Traditional statistical models often focus on clustering a single longitudinal feature, which may ignore the complexity of the clustering structures and the dynamic relationship when multiple longitudinal features are available. It is very common nowadays for a study to collect multiple features, and appropriately integrating multiple longitudinal features simultaneously for defining individual subgroups (i.e., clusters) becomes increasingly crucial to understanding population heterogeneity and predicting future outcomes. In particular, compared to clustering a single longitudinal feature, simultaneously clustering multiple longitudinal features (also known as joint clustering) facilitates the discovery of co-occurring trajectory patterns for multiple features of interest.
