--- a/_articles/RJ-2024-017/RJ-2024-017.Rmd
+++ b/_articles/RJ-2024-017/RJ-2024-017.Rmd
@@ -7,9 +7,9 @@ abstract: |
   simultaneously for defining individual subgroups (i.e., clusters)
   becomes increasingly crucial to understanding population heterogeneity
   and predicting future outcomes. The aim of this paper is to describe a
-  new package, **BCClong**, which implements a Bayesian consensus
+  new package, BCClong, which implements a Bayesian consensus
   clustering (BCC) model for multiple longitudinal features. Compared to
-  existing packages, several key features make the **BCClong** package
+  existing packages, several key features make the BCClong package
   appealing: (a) it allows simultaneous clustering of mixed-type (e.g.,
   continuous, discrete and categorical) longitudinal features, (b) it
   allows each longitudinal feature to be collected from different
@@ -38,8 +38,8 @@ author:
 date: '2025-03-09'
 date_received: '2023-04-20'
 journal:
-  firstpage: ~
-  lastpage: ~
+  firstpage: 41
+  lastpage: 61
 volume: 16
 issue: 2
 slug: RJ-2024-017
