--- a/_articles/RJ-2024-018/RJ-2024-018.Rmd
+++ b/_articles/RJ-2024-018/RJ-2024-018.Rmd
@@ -1,17 +1,16 @@
 ---
 title: 'reslr: An R Package for Relative Sea Level Modelling'
 date: '2025-03-09'
-abstract: "We present \\textbf{\\textit{reslr}}, an R package to perform Bayesian
-  modelling of relative sea level data. We include a variety of different statistical
-  models previously proposed in the literature, with a unifying framework for loading
-  data, fitting models, and summarising the results. Relative sea-level data often
-  contain measurement error in multiple dimensions, and so our package allows for
-  these to be included in the statistical models. When plotting the output sea level
-  curves, the focus is often on comparing rates of change, and so our package allows
-  for computation of the derivatives of sea level curves with appropriate consideration
-  of the uncertainty. We provide a large example dataset from the Atlantic coast of
-  North America and show some of the results that might be obtained from our package.
-  \n"
+abstract: "We present reslr, an R package to perform Bayesian modelling of relative
+  sea level data. We include a variety of different statistical models previously
+  proposed in the literature, with a unifying framework for loading data, fitting
+  models, and summarising the results. Relative sea-level data often contain measurement
+  error in multiple dimensions, and so our package allows for these to be included
+  in the statistical models. When plotting the output sea level curves, the focus
+  is often on comparing rates of change, and so our package allows for computation
+  of the derivatives of sea level curves with appropriate consideration of the uncertainty.
+  We provide a large example dataset from the Atlantic coast of North America and
+  show some of the results that might be obtained from our package. \n"
 draft: no
 author:
 - name: Maeve Upton
@@ -46,6 +45,9 @@ date_received: '2023-07-02'
 volume: 16
 issue: 2
 slug: RJ-2024-018
+journal:
+  lastpage: 81
+  firstpage: 61
 
 ---
 
