--- a/_articles/RJ-2024-019/RJ-2024-019.Rmd
+++ b/_articles/RJ-2024-019/RJ-2024-019.Rmd
@@ -48,8 +48,8 @@ author:
 date: '2025-03-11'
 date_received: '2023-07-02'
 journal:
-  firstpage: ~
-  lastpage: ~
+  firstpage: 82
+  lastpage: 99
 volume: 16
 issue: 2
 slug: RJ-2024-019
