--- a/_articles/RJ-2024-021/RJ-2024-021.Rmd
+++ b/_articles/RJ-2024-021/RJ-2024-021.Rmd
@@ -3,7 +3,7 @@ title: 'Pomdp: A Computational Infrastructure for Partially Observable Markov De
   Processes'
 date: '2025-03-08'
 abstract: |
-  Many important problems involve decision-making under uncertainty. For example, a medical professional needs to make decisions about  the best treatment option based on limited information about the  current state of the patient and uncertainty about outcomes. Different approaches have been developed by the applied mathematics, operations research, and artificial intelligence communities to address  this difficult class of decision-making problems. This paper presents the \CRANpkg{pomdp} package, which provides a computational infrastructure for an approach called the partially  observable Markov decision process (POMDP), which models the problem as a discrete-time stochastic control process. The package lets the user specify POMDPs using familiar R syntax, apply state-of-the-art POMDP solvers, and then take full advantage of R's range of capabilities,  including statistical analysis, simulation, and visualization, to work with the resulting models.
+  Many important problems involve decision-making under uncertainty. For example, a medical professional needs to make decisions about  the best treatment option based on limited information about the  current state of the patient and uncertainty about outcomes. Different approaches have been developed by the applied mathematics, operations research, and artificial intelligence communities to address  this difficult class of decision-making problems. This paper presents the pomdp package, which provides a computational infrastructure for an approach called the partially  observable Markov decision process (POMDP), which models the problem as a discrete-time stochastic control process. The package lets the user specify POMDPs using familiar R syntax, apply state-of-the-art POMDP solvers, and then take full advantage of R's range of capabilities,  including statistical analysis, simulation, and visualization, to work with the resulting models.
 author:
 - name: Michael Hahsler
   affiliation: Southern Methodist University
@@ -26,6 +26,9 @@ volume: 16
 issue: 2
 slug: RJ-2024-021
 draft: no
+journal:
+  lastpage: 133
+  firstpage: 116
 
 ---
 
