--- a/_news/RJ-2024-2-cran/RJ-2024-2-cran.Rmd
+++ b/_news/RJ-2024-2-cran/RJ-2024-2-cran.Rmd
@@ -27,6 +27,9 @@ preamble: \usepackage{float, longtable}
 volume: 16
 issue: 2
 slug: RJ-2024-2-cran
+journal:
+  lastpage: 203
+  firstpage: 202
 
 ---
 
@@ -52,7 +55,7 @@ mirrors <- cran_growth$mirrors
 
 In the past `r nmonths` months, `r npackages["new"]` new packages were
 added to the CRAN package repository. `r npackages["unarchived"]` packages
-were unarchived, `r npackages["archived"]` were archived and 
+were unarchived, `r npackages["archived"]` were archived and
 `r npackages["removed"]` had to be removed. The following shows the
 growth of the number of active packages in the CRAN package repository:
 
@@ -81,7 +84,7 @@ svn diff -r{2024-07-01}:{2024-09-30}
 
 Similar to providing ORCID identifiers for individual authors and contributors in R packages,
 the policy now encorages to provide ROR identifiers (from the Research Organization Registry,
-<https://ror.org/>) in a package's `DESCRIPTION` file in case there are organizations among 
+<https://ror.org/>) in a package's `DESCRIPTION` file in case there are organizations among
 the authors and contributors.
 
 The policy now points out explicitly that package names on CRAN are persistent and in general
