--- a/_news/RJ-2024-2-cran/RJwrapper.tex
+++ b/_news/RJ-2024-2-cran/RJwrapper.tex
@@ -4,10 +4,14 @@
 \usepackage{RJournal}
 \usepackage{amsmath,amssymb,array}
 \usepackage{booktabs}
+
+
 % tightlist command for lists without linebreak
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
+
 \usepackage{longtable}
+
 % Always define CSL refs as bib entries are contained in separate doc
 % Pandoc citation processing
 %From Pandoc 3.1.8
@@ -44,15 +48,24 @@
 \newcommand{\CSLLeftMargin}[1]{\parbox[t]{\csllabelwidth}{#1}}
 \newcommand{\CSLRightInline}[1]{\parbox[t]{\linewidth - \csllabelwidth}{#1}\break}
 \newcommand{\CSLIndent}[1]{\hspace{\cslhangindent}#1}
+
+
 \usepackage{float, longtable}
+
 \begin{document}
+
+
 %% do not edit, for illustration only
 \sectionhead{Contributed research article}
 \volume{16}
 \volnumber{2}
 \year{2024}
 \month{June}
+\setcounter{page}{202}
+
 \begin{article}
   \input{RJ-2024-2-cran}
 \end{article}
+
+
 \end{document}
