--- a/_news/RJ-2024-2-rfoundation/RJ-2024-2-rfoundation.Rmd
+++ b/_news/RJ-2024-2-rfoundation/RJ-2024-2-rfoundation.Rmd
@@ -18,6 +18,9 @@ header-includes: \usepackage{ctex}
 volume: 16
 issue: 2
 slug: RJ-2024-2-rfoundation
+journal:
+  lastpage: 210
+  firstpage: 210
 
 ---
 
