--- a/_articles/RJ-2024-012/RJwrapper.tex
+++ b/_articles/RJ-2024-012/RJwrapper.tex
@@ -13,10 +13,11 @@
 
 %% do not edit, for illustration only
 \sectionhead{Contributed research article}
-\volume{XX}
-\volnumber{YY}
-\year{20ZZ}
-\month{AAAA}
+\volume{16}
+\volnumber{2}
+\year{2024}
+\month{June}
+\setcounter{page}{4}
 
 %% replace RJtemplate with your article
 \begin{article}
