--- a/_articles/RJ-2024-012/zhao.tex
+++ b/_articles/RJ-2024-012/zhao.tex
@@ -2,9 +2,9 @@
 \title{LUCIDus: An R Package For Implementing Latent Unknown Clustering By Integrating Multi-omics Data (LUCID) With Phenotypic Traits}
 \author{by Yinqi Zhao, Qiran Jia, Jesse A. Goodrich, David V. Conti}
 \maketitle
-\begin{abstract}
+\abstract{%
 Many studies are leveraging current technologies to obtain multiple omics measurements on the same individuals. These measurements are usually cross-sectional, and methods developed and commonly used focus on omic integration at a single time point. More unique, and a growing area of interest, are studies that leverage biology or the temporal sequence of measurements to relate long-term exposures or germline genetics to intermediate measures capturing transitional processes that ultimately result in an outcome. In this context, we have previously introduced an integrative model named Latent Unknown Clustering by Integrating multi-omics Data (LUCID) aiming to distinguish unique effects of environmental exposures or germline genetics and informative omic effects while jointly estimating subgroups of individuals relevant to the outcome of interest. This multiple omics analysis consists of early integration (concatenation of omic layers to estimate common subgroups); intermediate integration (omic-layer-specific estimation of subgroups that are all related to the outcome); and late integration (omic-layer-specific estimation of subgroups that are then interrelated by a priori structures). In this article, we introduce LUCIDus version 3, an R package to implement the LUCID model. We review the statistical background of the model and introduce the workflow of LUCIDus, including model fitting, model selection, interpretation, inference, and prediction. Throughout, we use a realistic but simulated dataset based on an ongoing study, the Human Early Life Exposome Study (HELIX), to illustrate the workflow.
-\end{abstract}
+}
 %--------------------- section 1: introduction --------------------
 \section{Introduction} \label{sec1}
 The rapid advancement in high-throughput technology has made it possible to measure multiple omics (referred to as ``multi-omics'') data on the same person in many cohort studies. These datasets include DNA genome sequences \citep{goodwin2016coming}, RNA expression data \citep{ozsolak2011rna}, metabolites in biofluids \citep{beger2013review}, proteins in cells or tissues \citep{aslam2017proteomics}, as well as chemical exposures in the environment \citep{wild2005complementing}. For example, the Human Early-Life Exposome project (HELIX) measured molecular omics signatures including RNA expression data, metabolites, plasma proteins, etc. from 1300 children at the age of 6-11 in six European countries \citep{vrijheid2014human}. Guided by biology or the temporal sequence of measurements, these studies often share a common structure that relates germline genetics or environmental exposures to intermediate factors capturing transitional processes that ultimately result in an outcome. While these suspected causal pathways can be measured with current omic technology, the analysis often focuses on cross-sectional relationships using cluster analysis or models focused on feature selection. This is in part due to the analytic and computational challenges resulting from the complex structure of the data collected from various sources, limited sample sizes, and the high dimensionality of multi-omics information \citep{tini2019multi}. Existing methods do not consider risk factors that precede the omic measurements and link those factors with disease or trait outcomes while using multi-omics data to characterize the underlying mechanism. Thus, there is a great need to develop and easily implement approaches leveraging these mediating relationships or latent structures for the integration of multi-omics data \citep{subramanian2020multi}. 
