--- a/_articles/RJ-2024-014/pencal-RJ.tex
+++ b/_articles/RJ-2024-014/pencal-RJ.tex
@@ -5,7 +5,7 @@ of Survival with Many Longitudinal Predictors}
 
 \maketitle
 
-\begin{abstract}%
+\abstract{%
 In survival analysis, longitudinal information on the health status of a
 patient can be used to dynamically update the predicted probability that
 a patient will experience an event of interest. Traditional approaches
@@ -24,7 +24,7 @@ structure of the R package, provides a step by step example
 showing how to estimate PRC, compute dynamic predictions of survival and
 validate performance, and shows how parallelization can be used to
 significantly reduce computing time.
-\end{abstract}
+}
 
 \section{Introduction}\label{introduction}
 
