--- a/_issues/2024-2/2024-2.Rmd
+++ b/_issues/2024-2/2024-2.Rmd
@@ -31,14 +31,17 @@ articles:
   before: ~
   after: ~
 output:
-  rjtools::rjournal_pdf_issue: ~
+  rjtools::rjournal_pdf_issue: 
+    render_all: true
   rjtools::rjournal_web_issue: ~
 news:
 - RJ-2024-2-bioconductor
 - RJ-2024-2-cran
+- RJ-2024-2-rcore
 - RJ-2024-2-rfoundation
 
 ---
+
 
 
 
