--- a/_news/RJ-2024-2-editorial/RJ-2024-2-editorial.Rmd
+++ b/_news/RJ-2024-2-editorial/RJ-2024-2-editorial.Rmd
@@ -15,6 +15,9 @@ output:
 volume: 16
 issue: 2
 slug: RJ-2024-2-editorial
+journal:
+  lastpage: 3
+  firstpage: 3
 
 ---
 
@@ -33,7 +36,7 @@ the R Journal.
 
 # In this issue {-}
 
-News from CRAN, the R Foundation and Bioconductor are included in this issue.
+News from CRAN, the R Foundation, the R Core team, and Bioconductor are included in this issue.
 
 \noindent This issue features 10 contributed research articles the majority of
 which relate to R packages on a diverse range of topics. All packages are
