--- a/_news/RJ-2024-2-editorial/RJ-2024-2-editorial.tex
+++ b/_news/RJ-2024-2-editorial/RJ-2024-2-editorial.tex
@@ -13,7 +13,7 @@ the R Journal.
 \section*{In this issue}\label{in-this-issue}
 \addcontentsline{toc}{section}{In this issue}
 
-News from CRAN, the R Foundation and Bioconductor are included in this issue.
+News from CRAN, the R Foundation, the R Core team, and Bioconductor are included in this issue.
 
 \noindent This issue features 10 contributed research articles the majority of
 which relate to R packages on a diverse range of topics. All packages are
@@ -21,16 +21,50 @@ available on CRAN. Supplementary material with fully reproducible code is
 available for download from the Journal website. Topics covered in this issue
 are the following.
 
-\paragraph{Topic 1}\label{topic-1}
+\paragraph{Reviews}\label{reviews}
 
 \begin{itemize}
 \tightlist
 \item
-  paper 1 in topic 2
+  Current State and Prospects of R-Packages for the Design of Experiments
+\end{itemize}
+
+\paragraph{Modeling and Inference}\label{modeling-and-inference}
+
+\begin{itemize}
+\tightlist
 \item
-  paper 2 in topic 2
+  BCClong: An R Package for Bayesian Consensus Clustering for Multiple Longitudinal Features
 \item
-  etc
+  pencal: an R Package for the Dynamic Prediction of Survival with Many Longitudinal Predictors
+\item
+  Rfssa: An R Package for Functional Singular Spectrum Analysis
+\end{itemize}
+
+\paragraph{Computational Methods}\label{computational-methods}
+
+\begin{itemize}
+\tightlist
+\item
+  clarify: Simulation-Based Inference for Regression Models
+\item
+  FuzzySimRes: Epistemic Bootstrap --an Efficient Tool for Statistical Inference Based on Imprecise Data
+\item
+  Pomdp: A Computational Infrastructure for Partially Observable Markov Decision Processes
+\end{itemize}
+
+\paragraph{Applications}\label{applications}
+
+\begin{itemize}
+\tightlist
+\item
+  Fast and Flexible Search for Homologous Biological Sequences with DECIPHER v3
+\item
+  reslr: An R Package for Relative Sea Level Modelling
+\item
+  mcmsupply: An R Package for Estimating Contraceptive Method Market Supply Shares
+\item
+  LUCIDus: An R Package For Implementing Latent Unknown Clustering By Integrating Multi-omics Data (LUCID) With Phenotypic Traits
 \end{itemize}
 
 
