--- a/_articles/RJ-2024-009/RJ-2024-009.tex
+++ b/_articles/RJ-2024-009/RJ-2024-009.tex
@@ -31,7 +31,7 @@ The app's blueprint (Figure \ref{fig:fig2}, bottom) identifies the \emph{shiny} 
 While two of the \emph{shiny} modules within the ``iris\_explorer'' app pertain to the iris dataset specifically (``iris\_intro'' and ``iris\_cluster''), the remaining \emph{shiny} modules (``subset\_rows'', ``single\_column\_plot'', and ``save'') may be incorporated into other apps.
 
 \begin{figure}[h]
-\includegraphics[width=1\linewidth]{images/figure2} \caption{Top:  The "iris\_explorer" app guides a user through an analysis of the iris dataset in a tab-based sequence.  Bottom:  A blueprint of the "iris\_explorer" app shows the 5 tabs, each containing a single module identified by name within blue ovals. Some of the shiny modules require inputs and generate outputs as identified in gray polygons.}\label{fig:fig2}
+\includegraphics[width=1\linewidth]{images/figure2} \caption{Top:  The 'iris\_explorer' app guides a user through an analysis of the iris dataset in a tab-based sequence.  Bottom:  A blueprint of the 'iris\_explorer' app shows the 5 tabs, each containing a single module identified by name within blue ovals. Some of the shiny modules require inputs and generate outputs as identified in gray polygons.}\label{fig:fig2}
 \end{figure}
 
 \newpage
@@ -208,7 +208,7 @@ launch_shinymgr(shinyMgrPath = paste0(parentPath, "/shinymgr"))
 The portal is recognizable by the \emph{shinymgr} logo in the upper left corner (Figure \ref{fig:fig3}). The portal consists of three main tabs in the left menu. The ``Developer Tools'' tab is used to create apps, view the \emph{shinymgr} database, and register reports, while the ``Analysis (beta)'' and ``Reports (beta)'' tabs allow developers to evaluate apps from the user's perspective.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{images/figure3} \caption{The shinymgr Developer Portal consists of a sidebar panel where developers can create new shiny modules and new apps, and test-drive analyses and reports from the user's perspective. The main panel shows the "Build App" tab within the "Developer Tools" section.}\label{fig:fig3}
+\includegraphics[width=1\linewidth]{images/figure3} \caption{The shinymgr Developer Portal consists of a sidebar panel where developers can create new shiny modules and new apps, and test-drive analyses and reports from the user's perspective. The main panel shows the 'Build App' tab within the 'Developer Tools' section.}\label{fig:fig3}
 \end{figure}
 
 The ``Developer Tools'' section includes 4 tabs for app development: The ``Build App'' tab allows the developer to create new \emph{shinymgr} apps from existing modules using the \emph{shinymgr} app builder; the ``Database'' tab displays the \emph{shinymgr} database tables, the ``Queries'' tab contains a set of standard database queries, and the ``Add Reports'' tab allows the developer to link a report (Rmd or qmd) to a given \emph{shinymgr} app (Figure \ref{fig:fig3}), as described below.
@@ -220,6 +220,8 @@ The \emph{shinymgr} SQLite database (``shinymgr.sqlite'') is a single file creat
 The \emph{shinymgr} database consists of 11 tables in total (Figure \ref{fig:fig4}). These tables are connected to each other as a typical relational database, with primary keys establishing unique records in each table, and foreign keys that reference primary keys in other tables (see Appendix A for a full database schema and the ``database'' \emph{learnr} tutorial for additional information).
 
 The ``apps,'' ``appReports,'' ``reports,'' ``appTabs,'' and ``tabs'' tables largely store information on what a user would see when they run an analysis. The table ``apps'' stores information about apps such as ``iris\_explorer.'' Apps consist of tabs, which are listed in the ``tabs'' table. Tabs are linked to apps via the ``appTabs'' table. The table ``reports'' lists any Rmd or qmd files that serve as a report template, and the table ``appReports'' links a specific report with a specific app.
+
+The remaining 6 tables in Figure \ref{fig:fig4} are ``modules,'' ``modFunctionArguments,'' ``modFunctionReturns,'' ``modPackages,'' ``tabModules,'' and ``appStitching.'' These tables largely store information about \emph{shiny} modules that a developer creates, i.e., what \emph{shiny} modules have been written, what are their arguments and returns, and what packages they use. The ``tabModules'' table identifies which tabs call which \emph{shiny} modules (with a single tab capable of calling multiple \emph{shiny} modules), and the ``appStitching'' table specifies how \emph{shiny} modules are ``stitched'' together, i.e., which module returns are passed in as arguments to downstream \emph{shiny} modules.
 
 \begin{figure}[b]
 \includegraphics[width=1\linewidth]{images/figure4} \caption{The 11 tables of the shinymgr SQLite database. Lines indicate how the tables are related to each other.}\label{fig:fig4}
@@ -386,7 +388,7 @@ rerun_analysis(analysis_path = rds_filepath)
 The \texttt{rerun\_analysis()} function will launch a \emph{shiny} app with two tabs (Figure \ref{fig:fig7}); it can only be run during an interactive R session, with no other \emph{shiny} apps running.
 
 \begin{figure}
-\includegraphics[width=1\linewidth]{images/figure7} \caption{A screenshot of the rerun\_analysis() function, as called on the saved analysis from the iris\_explorer app (RDS file). The active tab, called "The App", allows a user to rerun a previously executed analysis. The "Analysis Summary" tab displays the values of all module arguments and returns, captured when the analysis was saved, along with a detailed description of the app, it's modules, the App's source code, and all package dependencies.}\label{fig:fig7}
+\includegraphics[width=1\linewidth]{images/figure7} \caption{A screenshot of the rerun\_analysis() function, as called on the saved analysis from the iris\_explorer app (RDS file). The active tab, called 'The App', allows a user to rerun a previously executed analysis. The 'Analysis Summary' tab displays the values of all module arguments and returns, captured when the analysis was saved, along with a detailed description of the app, it's modules, the App's source code, and all package dependencies.}\label{fig:fig7}
 \end{figure}
 
 The first tab is called ``The App'', and will be visible when the \texttt{rerun\_analysis()} function is called. It contains a header with the app's name, a subheading of ``Analysis Rerun,'' and a fully functioning, identical copy of the \emph{shiny} app used to generate the saved analysis. Below that, a disclaimer appears, indicating the app was produced from a saved analysis. A summary of the analysis is presented on the second tab that displays the values used to produce the given analysis output.
@@ -516,7 +518,7 @@ We thank Cathleen Balantic and Jim Hines for feedback on the overall package and
 Entity relationship diagram for the \emph{shinymgr} database, which tracks all components of an apps and modules (Figure \ref{fig:fig8}). The database consists of 11 tables. Primary keys are referenced with a ``pk'' prefix, while foreign keys are referenced with an ``fk'' prefix. A full description of the database is contained in the ``database'' \emph{learnr} tutorial that comes with the \emph{shinymgr} package
 
 \begin{figure}[h]
-\includegraphics[width=0.85\linewidth]{images/figure8} \caption{Entity relationship diagram for the shinymgr database, which tracks all components of an apps and modules.  The database consists of 11 tables. Primary keys are referenced with a "pk" prefix, while foreign keys are referenced with an "fk" prefix. A full description of the database is contained in the "database" learnr tutorial that comes with the shinymgr package.}\label{fig:fig8}
+\includegraphics[width=0.85\linewidth]{images/figure8} \caption{Entity relationship diagram for the shinymgr database, which tracks all components of an apps and modules.  The database consists of 11 tables. Primary keys are referenced with a 'pk' prefix, while foreign keys are referenced with an 'fk' prefix. A full description of the database is contained in the 'database' learnr tutorial that comes with the shinymgr package.}\label{fig:fig8}
 \end{figure}
 
 \newpage
