--- a/_issues/2024-1/2024-1.Rmd
+++ b/_issues/2024-1/2024-1.Rmd
@@ -33,7 +33,8 @@ articles:
     - RJ-2024-001
   after: null
 output:
-  rjtools::rjournal_pdf_issue: null
+  rjtools::rjournal_pdf_issue: 
+    render_all: true
   rjtools::rjournal_web_issue: null
 news:
   - RJ-2024-1-cran
