2024-1 remove formatted text from abstracts

--- a/_articles/RJ-2024-011/RJ-2024-011.Rmd
+++ b/_articles/RJ-2024-011/RJ-2024-011.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'BMRMM: An R Package for Bayesian Markov (Renewal) Mixed Models'
 abstract: |
-  We introduce the [**BMRMM**](https://CRAN.R-project.org/package=BMRMM)
+  We introduce the BMRMM
   package implementing Bayesian inference for a class of Markov renewal
   mixed models which can characterize the stochastic dynamics of a
   collection of sequences, each comprising alternative instances of
