RJ-2024-012 texor fixes

--- a/_articles/RJ-2024-012/RJ-2024-012.Rmd
+++ b/_articles/RJ-2024-012/RJ-2024-012.Rmd
@@ -350,13 +350,15 @@ In the M-step, we update parameter estimates by maximizing Equation
 \@ref(eq:eq4) in terms of $\boldsymbol{\mathbf{\Theta}}$, which results
 in the following:
 
-$$\begin{aligned}
+$$
+\begin{aligned}
     \boldsymbol{\mathbf{\beta}}^{(t+1)} & = \arg \max_{\boldsymbol{\mathbf{\beta}}} \sum_{i=1}^N \sum_{j=1}^K r_{ij}^{(t)} \log S(X_i = j| \boldsymbol{\mathbf{G}}_i; \boldsymbol{\mathbf{\beta}}_j) \label{eq5} \\
     \boldsymbol{\mathbf{\mu}}_j^{(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)}\boldsymbol{\mathbf{Z}}_i}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq6} \\
     \boldsymbol{\mathbf{\Sigma}}_j^{(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)} \left(\boldsymbol{\mathbf{Z}}_i - \boldsymbol{\mathbf{\mu}}_j^{(t+1)} \right) \left(\boldsymbol{\mathbf{Z}}_i - \boldsymbol{\mathbf{\mu}}_j^{(t+1)} \right)^T}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq7} \\
     \gamma_j^{(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)}Y_i}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq8} \\
     \sigma_j^{2(t+1)} & = \frac{\sum_{i=1}^N r_{ij}^{(t)} \left(Y_i - \gamma_j^{(t+1)} \right)^2}{\sum_{i=1}^N r_{ij}^{(t)}} \label{eq9}
-\end{aligned}   (\#eq:eq5)$$
+\end{aligned}   (\#eq:eq5)
+$$
 
 Although maximization of $\boldsymbol{\mathbf{\beta}}_j^{(t+1)}$ in
 Equation \@ref(eq:eq5) does not have a closed-form solution, it is
@@ -369,7 +371,9 @@ $\boldsymbol{\mathbf{\Sigma}}_j$. We use the parameterization of
 covariance matrices by means of an eigenvalue decomposition in the form
 below [@banfield1993model]:
 
-$$\boldsymbol{\Sigma}_j = \lambda_j \boldsymbol{D}_j  \boldsymbol{A}_j \boldsymbol{D}_j^T \label{eq10}   (\#eq:eq10)$$
+$$
+\boldsymbol{\Sigma}_j = \lambda_j \boldsymbol{D}_j  \boldsymbol{A}_j \boldsymbol{D}_j^T (\#eq:eq10)
+$$
 
 where $\lambda_j$ is a scalar, $\boldsymbol{\mathbf{D}}_j$ is the
 orthogonal matrix of eigenvectors, and $\boldsymbol{\mathbf{A}}_j$ is a
@@ -691,17 +695,17 @@ variable for that specific cluster vs. the reference cluster. The second
 table characterizes each cluster by its omics signature. The omics
 signature is a cluster-specific mean for each variable in the omics
 data. For instance, latent cluster 1 is characterized by low levels of
-cg_EPM2AIP1 ($\mu_1 (\text{cg\_EPM2AIP1})= -0.157$) and cg_VTRNA1_3
-($\mu_1 (\text{cg\_VTRNA1\_3})= -0.225$), and high levels of all other
+cg_EPM2AIP1 ($\mu_1 (\text{cg_EPM2AIP1})= -0.157$) and cg_VTRNA1_3
+($\mu_1 (\text{cg_VTRNA1_3})= -0.225$), and high levels of all other
 omic features; for example, cg_GRHL3
-($\mu_1 (\text{cg{\_}GRHL3})= 0.2452019$). On the contrary, latent
+($\mu_1 (\text{cg_GRHL3})= 0.2452019$). On the contrary, latent
 cluster 2 features high levels of cg\_EPM2AIP1
-($\mu_2 (\text{cg{\_}EPM2AIP1})=  0.303$) and cg\_VTRNA1\_3
-($\mu_2 (\text{cg{\_}VTRNA1{\_}3})= 0.185$), and low levels of all other
-features including cg\_GRHL3 ($\mu_2 (\text{cg{\_}GRHL3})= -0.363$). The
+($\mu_2 (\text{cg_EPM2AIP1})=  0.303$) and cg\_VTRNA1\_3
+($\mu_2 (\text{cg_VTRNA1_3})= 0.185$), and low levels of all other
+features including cg\_GRHL3 ($\mu_2 (\text{cg_GRHL3})= -0.363$). The
 third table relates the exposures to the latent clusters. For instance,
-`hs``_``hg``_``m``_``scaled` represents the scaled level of maternal
-mercury exposure. The coefficient OR for `hs``_``hg``_``m``_``scaled` is
+`hs_hg_m_scaled` represents the scaled level of maternal
+mercury exposure. The coefficient OR for `hs_hg_m_scaled` is
 0.791, meaning that for each doubling of the scaled level of maternal
 mercury exposure, the odds ratio of being assigned to latent cluster 2
 is 2.205. Since latent cluster 2 is associated with a higher child level
@@ -1217,9 +1221,9 @@ $\boldsymbol{\mathbf{Y}}$ association, respectively. Similar to LUCID
 early integration, the parameter `family` specifies the outcome type,
 which is `normal` here, corresponding to a continuous outcome. For a
 binary outcome, `family` should be specified as `binary`. `lucid()`
-returns an object of class `lucid``_``parallel` providing the MLE of the
+returns an object of class `lucid_parallel` providing the MLE of the
 LUCID in parallel model as well as IPs. We can call `summary()` with the
-input of a `lucid``_``parallel` object to print three tables of the
+input of a `lucid_parallel` object to print three tables of the
 model results. Similar to the summary table of a LUCID early integration
 model, the first table summarizes the association between the latent
 clusters for each omic layer and the outcome (cytokeratin 18). The
@@ -1403,8 +1407,8 @@ indicating the number of latent clusters for each successively linked
 omic layer. We specify `lucid_model` to be `serial`. The use of
 arguments `CoG`, `CoY`, `useY`, and `family` is exactly the same as for
 a LUCID in parallel model. `lucid()` constructs the model and returns an
-object of class `lucid``_``serial`, and calling `summary()` with the
-input of a `lucid``_``serial` object prints the summarizing tables of
+object of class `lucid_serial`, and calling `summary()` with the
+input of a `lucid_serial` object prints the summarizing tables of
 the model estimates. We have introduced summarizing tables for the LUCID
 early integration model and the LUCID in parallel model. Since the LUCID
 in serial model is a combination of LUCID early integration and LUCID in
