--- a/_articles/RJ-2024-019/RJ-2024-019.Rmd
+++ b/_articles/RJ-2024-019/RJ-2024-019.Rmd
@@ -260,9 +260,9 @@ typically acquired discretely at a set of grid points and are
 susceptible to contamination by random noise. This phenomenon can be
 represented as follows:
 
-$$\label{discr_data}
-
-	Y_{i,k} = y_{i}(t_k) +\varepsilon_{i,k}, \quad k=1,\ldots, K.   (\#eq:discr-data)$$
+$$
+	Y_{i,k} = y_{i}(t_k) +\varepsilon_{i,k}, \quad k=1,\ldots, K.   (\#eq:discr-data)
+$$
 
 In this expression, $t_k\in\mathcal{T}$, and $K$ denotes the count of
 discrete grid points across all samples. The $\varepsilon_{i,k}$ terms
@@ -279,9 +279,9 @@ $\mathbb{H}$. Each sample function $y_{i}(\cdot)$ in
 \@ref(eq:discr-data) is then considered as a finite linear combination
 of the first $d$ basis functions:
 
-$$\label{basis_expan}
-
-	y_i(s)= \sum_{j=1}^d c_{ij}\nu_j(s).   (\#eq:basis-expan)$$
+$$
+	y_i(s)= \sum_{j=1}^d c_{ij}\nu_j(s).   (\#eq:basis-expan)
+$$
 
 Subsequently, the coefficients $c_{ij}$ can be estimated using least
 square techniques. By adopting the linear representation form for the
@@ -569,8 +569,8 @@ knitr::include_graphics(c("figures/roadmap.png"))
 The roadmap of the main functions used in the
 [**Rfssa**](https://CRAN.R-project.org/package=Rfssa) package is given
 in Figure \@ref(fig:figroadpap). The inputs and outputs of these
-functions are described in Table \@ref(tab:1). As it can be seen from
-Table \@ref(tab:1), three classes (`funts`, `fssa` and `fforecast`) are
+functions are described in Table [1](#tbl:tab-1). As it can be seen from
+Table [1](#tbl:tab-1), three classes (`funts`, `fssa` and `fforecast`) are
 used to support the return objects of theses functions. The
 `funts(`$\cdot$`)`, `fssa(`$\cdot$`)` and `fforecast(`$\cdot$`)`
 functions are the constructors of the `funts`, `fssa` and `fforecast`
@@ -578,7 +578,7 @@ classes, respectively. In the rest of this section we present these
 classes with illustrative examples, and later we describe the
 reconstruction and forecasting functions in details.
 
-::: {#tab:1}
+::: {#tbl:tab-1}
   -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
   Function                    Descriptions                                                                                                                                                                                                                                                           Returns
   --------------------------- ------------------------------------------------------------------------------------------ --------------------------------------------------------------------------------------------------------------------------------------------------------------------------- ----------------------------------------------------------------------------
@@ -591,8 +591,7 @@ reconstruction and forecasting functions in details.
   `fforecast(`$\cdot$`)`      Performs FSSA R-forecasting or FSSA V-forecasting.                                         An object of class `fssa`, list of numeric vectors includes indices of elementary components of a group used for reconstruction and forecasting and forecast horizon $h$.   An object of class `fforecast`.
   -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
-  : Table 1: A summary of FSSA written functions in the
-  [**Rfssa**](https://CRAN.R-project.org/package=Rfssa) package.
+  : Table 1: A summary of FSSA written functions in the [**Rfssa**](https://CRAN.R-project.org/package=Rfssa) package.
 :::
 
 ### The `funts` class {#subsec:fts}
