--- a/index.Rmd
+++ b/index.Rmd
@@ -54,6 +54,8 @@ p > span.doi, td > span.doi {
 }
 ```
 
+> We apologise for the delay in the appearance of some of the 2024 issues. We are working hard on some technical problems, and we hope to have them all out soon.
+
 The R Journal is a peer-reviewed, open-access scientific journal, published by The R Foundation. It features short- to medium-length articles (up to 20 pages) covering topics of interest to users and developers of R. For example, description and implementation details of R packages, surveys or reviews of R software related to a particular area, applications of R software or descriptions of teaching resources related to R.
 
 The R Journal reaches a wide audience and has a thorough review process. It has a generally increasing [SJR impact factor](https://www.scimagojr.com/journalsearch.php?q=21100255423&amp;tip=sid&amp;exact=no). Papers are expected to be concise, clearly written, not too technical, clearly related to R, and follow reproducible practices. Additional technical details and examples could be included as supplementary material. Authors of refereed articles should take care to:
