Changed Julia Wrobel URL

--- a/editors.Rmd
+++ b/editors.Rmd
@@ -52,7 +52,7 @@ d-article > * {
 - [Xiaoqian Wang](https://xqnwang.rbind.io), Monash University, Australia
 - [Wenjie Wang](https://wwenjie.org), Eli Lilly and Company, USA
 - [Tomasz Woźniak](https://fbe.unimelb.edu.au/our-people/staff/economics/tomasz-wozniak), University of Melbourne, Australia
-- [Julia Wrobel](http://juliawrobel.com), Emory University, USA
+- [Julia Wrobel](https://scholar.google.com/citations?user=QI8GrFUAAAAJ&hl=en), Emory University, USA
 
 ## Technical editor
 
