Updated latex instructions

--- a/submissions.Rmd
+++ b/submissions.Rmd
@@ -39,11 +39,9 @@ The `rticles::rjournal_article` output format has been deprecated in favour of `
 
 ### LaTeX format
 
-Articles can also be written using the [LaTeX template](https://journal.r-project.org/share/RJtemplate.zip). Using this style you will need to provide RJwrapper.tex, RJwrapper.pdf, RJournal.sty, your-article.tex (which contains the content of your paper), your-article.bib, your-article.R (to reproduce results in your paper), in addition to the motivation letter. The `rjtools` check functions described below can also be applied to check your files prior to submission.
+Articles can also be written using the [LaTeX template](https://journal.r-project.org/share/RJtemplate.zip). Instructions on using this template are provided in the [LaTeX author guide](https://journal.r-project.org/share/author-guide.pdf). LaTeX submissions that do not follow these guidelines will be rejected without review.
 
-LaTeX submissions must compile with pdflatex. Please use as few LaTeX packages as possible. The template already includes several commonly-used packages such as `amsmath`, `booktabs`, `tikz`,  etc.  Do not use your own styles, fonts, or syntax colouring.
-
-LaTeX submissions that do not follow these guidelines will be rejected without review.
+The `rjtools` check functions described below can also be applied to check your files prior to submission.
 
 # Checking your article
 
